# cdc_sysconf

./: Readme.md
code/: cdc_json_example.json
code/debezium/: Dockerfile  Readme.md
code/debezium/deploy/development/kube1.alahd.kz.test.bash.kz/: deploy_debezium.yml  svc_debezium.yml
code/debezium/deploy/development/some-kuber-cluster/: deploy_debezium.yml  svc_debezium.yml
code/go_prometheus/: Dockerfile  Readme.md  go.mod  go.sum  main.go  prometheus.yml
code/rust_redis/: Cargo.toml  Readme.md
code/rust_redis/src/: main.rs
