[package]
name = "rust_redis_cdc"
version = "0.1.0"
edition = "2021"
authors = ["Dmitriy Vlassov aka batman <dmitriy@vlassov.pw>"]
description = "Rust Redis CDC MVP for sysconf 2022"

[dependencies]
tokio = { version="1.20.1", features = ["full"] }
rdkafka = { version="0.28.0", default-features = false, features = ["cmake-build"] }
log ="0.4.17"
env_logger = "0.9.1"
serde = "1.0.143"
serde_json = "1.0.83"
simple_redis = "0.6.1"
